2018-05-16  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips/mips32/libm-test-ulps: Update.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.

2018-05-16  Florian Weimer  <fweimer@redhat.com>

	* support/Makefile (libsupport-routines): Add support_quote_blob,
	support_test_compare_blob.
	(tests): Add tst-support_quote_blob, tst-test_compare_blob.
	* support/check.h (TEST_COMPARE_BLOB): Define.
	(support_test_compare_blob): Declare.
	* support/support.h (support_quote_blob): Declare.
	* support/support_quote_blob.c: New file.
	* support/support_test_compare_blob.c: Likewise.
	* support/tst-support_quote_blob.c: Likewise.
	* support/tst-test_compare_blob.c: Likewise.

2018-05-16  Florian Weimer  <fweimer@redhat.com>

	* stdlib/strtod_nan.c: Include <math-type-macros-double.h> instead
	of <strtod_nan_double.h>.
	* stdlib/strtod_nan_main.c (STRTOD_NAN): Use SET_NAN_PAYLOAD
	instead of SET_MANTISSA.
	* stdlib/strtof_nan.c: Include <math-type-macros-float.h> instead
	of include <strtod_nan_float.h>.
	* stdlib/strtold_nan.c: Include <math-type-macros-ldouble.h>
	instead of <strtod_nan_ldouble.h>.
	* stdlib/strtod_nan_double.h: Move to ...
	* sysdeps/generic/math-nan-payload-double.h: ... here.
	(FLOAT): Remove definition.
	(SET_MANTISSA): Rename to ...
	(SET_NAN_PAYLOAD): ... this.
	* stdlib/strtod_nan_float.h: Move to ...
	* sysdeps/generic/math-nan-payload-float.h: ... here.
	(FLOAT): Remove definition.
	(SET_MANTISSA): Rename to ...
	(SET_NAN_PAYLOAD): ... this.
	* sysdeps/generic/math-type-macros-double.h: Include
	<math-nan-payload-double.h>.  Include <math/math-svid-compat.h>
	instead of <math-svid-compat.h>.
	* sysdeps/generic/math-type-macros-float.h: Include
	<math-nan-payload-float.h>.  Include <math/math-svid-compat.h>
	instead of <math-svid-compat.h>.
	* sysdeps/generic/math-type-macros-float128.h: Include
	<math-nan-payload-float128.h>.
	* sysdeps/generic/math-type-macros-ldouble.h: Include