@@ -1,3 +1,2 @@
 #define STRNCAT __strncat_sse2
-#define STRNCAT_PRIMARY
-#include "string/strncat.c"
+#include <string/strncat.c>
